style(triggers): fix alignment

--- a/src/features/WorkflowManager/components/Overview/styles.scss
+++ b/src/features/WorkflowManager/components/Overview/styles.scss
@@ -45,12 +45,14 @@
   }
   .c-webhook {
     display: flex;
+    align-items: center;
     //justify-content: space-between;
     padding-top: 1rem;
   }
 
   .c-schedule {
     display: flex;
+    align-items: center;
     //justify-content: space-between;
     padding-top: 1rem;
     margin-right: 5 rem;
